2003-12-27  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.[ch]: 
	(connection_verify_certificate),
	(connection_do_open), 
	(connection_do_close), 
	(connection_in_event),
	(connection_send),
	(lm_connection_new): Updated to not pass SSL function everywhere.
	(lm_connection_open): Removed the _ssl function
	(lm_connection_open_and_block): Removed the _ssl function
	(lm_connection_set_use_ssl): Added, set LmSSLFunction here instead.
	(lm_connection_get_use_ssl): Internal update

2003-12-27  Mikael Hallendal  <micke@imendio.com>

	* docs/reference/tmpl/lm-error.sgml:
	* loudmouth/lm-connection.c:
	* loudmouth/lm-connection.h:
	(connection_connect_nonblocking),
	(connection_do_open),
	(connection_http_proxy_negotiate),
	(lm_connection_new),
	(lm_connection_get_proxy_type),
	(lm_connection_set_proxy_type),
	(lm_connection_get_proxy_server),
	(lm_connection_set_proxy_server),
	(lm_connection_get_proxy_port),
	(lm_connection_set_proxy_port):
	- Add support for HTTP proxy
	- Patch from Josh Beam <josh@3ddrome.com>
	- Needed changes to Loudmouth to fix bug #117757 in Gossip.

2003-12-19  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: 
	(connection_free): cleaned up a bit.
	(connection_connect_nonblocking): added, nonblocking connect
	(connection_do_open):
	- Use the nonblocking connect
	- set state
	(connection_do_close): cleaned up 
	(connection_auth_reply): set state
	(lm_connection_cancel_open): added
	(lm_connection_authenticate): set state
	(lm_connection_is_open): use state
	(lm_connection_is_authenticated): use state
	(lm_connection_get_state): added
	- Part fixes bug #122326

2003-12-15  Mikael Hallendal  <micke@imendio.com>

	* README: Updated information about bug reporting

2003-12-15  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	- Fixed issue with the SSL parts. Patch from Colin Walters

2003-11-20  Ross Burton  <ross@burtonini.com>

	* loudmouth/lm-message-node.h: