@@ -1,3 +1,9 @@
+2004-01-05  Mikael Hallendal  <micke@imendio.com>
+
+	* loudmouth/lm-connection.c: 
+	- Work in progress of making the lm_connection_open really async.
+	- Currently broken for lm_connection_open_block.
+
 2003-12-27  Mikael Hallendal  <micke@imendio.com>
 
 	* loudmouth/lm-connection.[ch]: 
